Jump bug fix + minor visual changes

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -1,7 +1,7 @@
 body {
     height: 100%;
     display: block;
-    padding-left: 30px;
+    padding-left: 10px;
     margin: auto auto;
 }
 
@@ -16,4 +16,5 @@ body {
 .content img {
     max-width: 100%;
     height: auto;
+    display: block;
 }
